this should fix letter spacing for contact

--- a/css/styles-contact.css
+++ b/css/styles-contact.css
@@ -258,7 +258,7 @@
   }
   .subscribe-form label {
     font-size: 2.2vw;
-    letter-spacing: -0.3px;
+    letter-spacing: -0.5px;
   }
   .subscribe-form input {
     max-height: 2.4vw;
